--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "battlemetrics": "^1.1.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "node-fetch": "^3.3.0"
+    "firebase": "^9.18.0",
+    "node-fetch": "^3.3.0",
+    "nodemon": "^2.0.21",
+    "set-interval-async": "^3.0.3"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
