change to canvas

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "battlemetrics": "^1.1.0",
+    "canvas": "^2.11.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
