--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.4.0",
     "battlemetrics": "^1.1.0",
     "canvas": "^2.11.2",
     "discord.js": "^14.7.1",
