--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
+    "moment-timezone": "^0.5.43",
     "mongodb": "^5.1.0",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.21",
