restart squadJS buttons to discord

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "axios": "^1.4.0",
     "battlemetrics": "^1.1.0",
     "canvas": "^2.11.2",
-    "discord.js": "^14.7.1",
+    "discord-buttons": "^4.0.0-deprecated",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "moment-timezone": "^0.5.43",
