--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "type": "module",
-  "dependencies": {
-    "axios": "^1.4.0",
-    "battlemetrics": "^1.1.0",
-    "canvas": "^2.11.2",
-    "centrifuge": "^3.1.2",
-    "cli-table": "^0.3.11",
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.0.3",
-    "firebase": "^9.18.0",
-    "moment-timezone": "^0.5.43",
-    "mongodb": "^5.1.0",
-    "node-fetch": "^3.3.0",
-    "nodemon": "^2.0.21",
-    "pureimage": "^0.3.17",
-    "set-interval-async": "^3.0.3",
-    "websocket": "^1.0.34"
-  },
+  "name": "donationbot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.2",
+    "canvas": "^2.11.2",
+    "discord.js": "^14.15.2",
+    "dotenv": "^16.4.5",
+    "moment-timezone": "^0.5.45",
+    "mongodb": "^6.6.0",
+    "node-fetch": "^3.3.2"
   }
 }
