--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "node-schedule": "^2.1.1"
   }
 }
