--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas": "^2.11.2",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
+    "gifencoder": "^2.0.1",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.0",
     "node-fetch": "^3.3.2",
