--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "canvas": "^2.11.2",
+    "dayjs": "^1.11.13",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "moment-timezone": "^0.5.45",
