--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.0",
     "node-fetch": "^3.3.2",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "rcon-client": "^4.2.5"
   }
 }
