--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.13",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.0",
     "node-fetch": "^3.3.2",
