--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dayjs": "^1.11.13",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
+    "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.0",
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
-    "rcon-client": "^4.2.5"
+    "rcon-client": "^4.2.5",
+    "undici": "^5.29.0"
   }
 }
